; ModuleID = '/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_slowfloat-32.c_slow_float32_to_int32_round_to_zero.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_slowfloat-32.c_slow_float32_to_int32_round_to_zero.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@slow_float_rounding_mode = common dso_local global i32 0, align 4
@float_round_to_zero = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @slow_float32_to_int32_round_to_zero(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @slow_float_rounding_mode, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @float_round_to_zero, align 4
  store i32 %6, i32* @slow_float_rounding_mode, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @float32ToFloatX(i32 %7)
  %9 = call i32 @floatXToInt32(i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %3, align 4
  store i32 %10, i32* @slow_float_rounding_mode, align 4
  %11 = load i32, i32* %4, align 4
  ret i32 %11
}

declare dso_local i32 @floatXToInt32(i32) #1

declare dso_local i32 @float32ToFloatX(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
